convertedToMDAPI/objects/ContactPurpose__c.object
<CustomObject>
    <label>Contact Purpose</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>CP #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Purposes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purposes</relationshipLabel>
        <relationshipName>Purposes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <referenceTo>Purpose__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Purposes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>